--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "language-learning-with-subtitles"
+name = "llsubtitles"
 version = "0.1.0"
 description = "Use OpenAI's whisper to generate subtitles in multiple languages for the purpose of language learning"
 authors = ["Brian Moody <brian.k.moody@outlook.com>"]
